--- a/frontend/locales/fr.json
+++ b/frontend/locales/fr.json
@@ -1697,30 +1697,26 @@
     "variants": "Variantes"
   },
   "reminders": {
-    "birthdays_desc": "Notification pour les anniversaires clients à venir",
-    "birthdays_label": "Anniversaires",
-    "client_reactivation_desc": "Alerte si un client VIP n’est pas revenu",
-    "client_reactivation_label": "Réactivation client",
-    "debt_recovery": "Debt Recovery",
-    "debt_recovery_desc": "Rappel si la dette d’un client dépasse un montant",
-    "debt_recovery_label": "Recouvrement de dettes",
-    "dormant_products_desc": "Alerte si un produit n’a pas été vendu depuis longtemps",
-    "dormant_products_label": "Produit Dormant",
-    "expense_spike_desc": "Alerte si les charges augmentent anormalement",
-    "expense_spike_label": "Pic de dépenses",
-    "inventory_check_desc": "Rappel pour vérifier le stock physique d’un produit",
-    "inventory_check_label": "Inventaire tournant",
-    "late_deliveries_desc": "Alerte si une livraison fournisseur dépasse le délai",
-    "late_deliveries_label": "Livraison en Retard",
-    "low_stock_label": "Stock Faible",
-    "monthly_report_desc": "Disponibilité du résumé comptable mensuel",
-    "monthly_report_label": "Rapport mensuel",
-    "pending_invitations_desc": "Rappel pour les invitations d’équipe non acceptées",
+    "inventory_check_label": "Vérification inventaire",
+    "inventory_check_desc": "Alerte si pas d'inventaire depuis X jours",
+    "dormant_products_label": "Produits dormants",
+    "dormant_products_desc": "Produits sans vente depuis X jours",
+    "late_deliveries_label": "Livraisons en retard",
+    "late_deliveries_desc": "Critique après X jours de retard",
+    "replenishment_label": "Réapprovisionnement",
+    "replenishment_desc": "Produits sous le stock minimum",
     "pending_invitations_label": "Invitations en attente",
-    "replenishment_desc": "Suggestions d’achat basées sur les ruptures",
-    "replenishment_label": "Réapprovisionnement Suggéré",
-    "stock_alerts": "Critical alerts for low stock or expired products.",
-    "title": "Reminder Rules",
+    "pending_invitations_desc": "En attente depuis X jours",
+    "debt_recovery_label": "Recouvrement de dettes",
+    "debt_recovery_desc": "Paiements clients en retard",
+    "client_reactivation_label": "Réactivation clients",
+    "client_reactivation_desc": "Clients fidèles inactifs depuis X jours",
+    "birthdays_label": "Anniversaires clients",
+    "birthdays_desc": "Notification pour les anniversaires",
+    "monthly_report_label": "Rapport Mensuel",
+    "monthly_report_desc": "Résumé des performances",
+    "expense_spike_label": "Pic de dépenses",
+    "expense_spike_desc": "Alerte si les dépenses augmentent de X%",
     "unit_days": "jours"
   },
   "settings": {
