--- a/frontend/locales/audit_result.json
+++ b/frontend/locales/audit_result.json
@@ -1230,6 +1230,7 @@
     "price_range": "Price range",
     "products": "Products",
     "reset": "Reset",
+    "search_placeholder": "Search for products or suppliers...",
     "search_product": "Search product...",
     "search_supplier": "Search supplier...",
     "send_invitation": "Send invitation",
@@ -1718,7 +1719,7 @@
     "pending_invitations_desc": "Reminder for unaccepted team invitations",
     "pending_invitations_label": "Pending Invitations",
     "replenishment_desc": "Purchase suggestions based on out-of-stock items",
-    "replenishment_label": "Réapprovisionnement",
+    "replenishment_label": "Replenishment",
     "stock_alerts": "Critical alerts for low stock or expired products.",
     "title": "Reminder Rules",
     "unit_days": "days"
@@ -1903,12 +1904,21 @@
     "dashboard": "Supplier Dashboard",
     "delivery_zones": "Delivery Zones",
     "min_order": "Min Order",
+    "no_orders": "No orders found",
+    "order_date": "Order Date",
+    "order_details": "Order Details",
     "order_id": "Order ID",
+    "order_items": "Items",
+    "order_status": "Status",
+    "order_summary": "Summary",
+    "order_total": "Total",
     "orders": "Orders Received",
+    "orders_history": "Order History",
     "pending_orders": "Pending Orders",
     "refuse": "Refuse",
     "revenue_month": "Revenue this month",
     "reviews": "Customer Reviews",
+    "search_orders": "Search orders...",
     "ship": "Ship",
     "top_products": "Top Products",
     "unavailable": "Unavailable"
@@ -1937,6 +1947,8 @@
     "commercial_profile": "Profil commercial",
     "company_name_label": "Company Name *",
     "company_name_ph": "Company Name",
+    "contact_email": "Contact Email",
+    "contact_phone": "Contact Phone",
     "create_profile": "Create Profile",
     "days": "days",
     "description_label": "Description",
