--- a/frontend/locales/en.json
+++ b/frontend/locales/en.json
@@ -1230,14 +1230,14 @@
     "price_range": "Price range",
     "products": "Products",
     "reset": "Reset",
+    "search_placeholder": "Search for products or suppliers...",
     "search_product": "Search product...",
     "search_supplier": "Search supplier...",
     "send_invitation": "Send invitation",
     "star": "⭐",
     "suppliers": "Marketplace Suppliers",
     "title": "Marketplace",
-    "verified_only": "Verified only",
-    "search_placeholder": "Search for products or suppliers..."
+    "verified_only": "Verified only"
   },
   "modals": {
     "cancel": "Cancel",
@@ -1698,30 +1698,26 @@
     "variants": "Variantes"
   },
   "reminders": {
-    "birthdays_desc": "Notification for upcoming customer birthdays",
-    "birthdays_label": "Birthdays",
-    "client_reactivation_desc": "Alert if a VIP customer has not returned",
-    "client_reactivation_label": "Client Reactivation",
-    "debt_recovery": "Debt Recovery",
-    "debt_recovery_desc": "Manage automatic reminders for customer debts based on history.",
-    "debt_recovery_label": "Debt Recovery",
-    "dormant_products_desc": "Alert if a product has not been sold for a long time",
-    "dormant_products_label": "Dormant Product",
-    "expense_spike_desc": "Alert if expenses increase abnormally",
-    "expense_spike_label": "Expense Spike",
-    "inventory_check_desc": "Reminder to verify physical stock of a product",
-    "inventory_check_label": "Inventory Count",
-    "late_deliveries_desc": "Alert if a supplier delivery is overdue",
-    "late_deliveries_label": "Late Delivery",
-    "low_stock_label": "Low Stock",
-    "monthly_report_desc": "Availability of the monthly accounting summary",
-    "monthly_report_label": "Monthly Report",
-    "pending_invitations_desc": "Reminder for unaccepted team invitations",
+    "inventory_check_label": "Inventory Check",
+    "inventory_check_desc": "Alert if no inventory performed for X days",
+    "dormant_products_label": "Dormant Products",
+    "dormant_products_desc": "Products without sales for X days",
+    "late_deliveries_label": "Late Deliveries",
+    "late_deliveries_desc": "Critical after X days of delay",
+    "replenishment_label": "Replenishment",
+    "replenishment_desc": "Products below minimum stock",
     "pending_invitations_label": "Pending Invitations",
-    "replenishment_desc": "Purchase suggestions based on out-of-stock items",
-    "replenishment_label": "Suggested Replenishment",
-    "stock_alerts": "Critical alerts for low stock or expired products.",
-    "title": "Reminder Rules",
+    "pending_invitations_desc": "Pending for X days",
+    "debt_recovery_label": "Debt Recovery",
+    "debt_recovery_desc": "Reminders for outstanding debts",
+    "client_reactivation_label": "Client Reactivation",
+    "client_reactivation_desc": "Loyal clients inactive for X days",
+    "birthdays_label": "Birthdays",
+    "birthdays_desc": "Notification for upcoming birthdays",
+    "monthly_report_label": "Monthly Report",
+    "monthly_report_desc": "Generate performance summary",
+    "expense_spike_label": "Expense Spike",
+    "expense_spike_desc": "Alert if expenses increase by X%",
     "unit_days": "days"
   },
   "settings": {
@@ -1904,24 +1900,24 @@
     "dashboard": "Supplier Dashboard",
     "delivery_zones": "Delivery Zones",
     "min_order": "Min Order",
+    "no_orders": "No orders found",
+    "order_date": "Order Date",
+    "order_details": "Order Details",
     "order_id": "Order ID",
+    "order_items": "Items",
+    "order_status": "Status",
+    "order_summary": "Summary",
+    "order_total": "Total",
     "orders": "Orders Received",
+    "orders_history": "Order History",
     "pending_orders": "Pending Orders",
     "refuse": "Refuse",
     "revenue_month": "Revenue this month",
     "reviews": "Customer Reviews",
+    "search_orders": "Search orders...",
     "ship": "Ship",
     "top_products": "Top Products",
-    "unavailable": "Unavailable",
-    "order_date": "Order Date",
-    "order_status": "Status",
-    "order_total": "Total",
-    "orders_history": "Order History",
-    "no_orders": "No orders found",
-    "search_orders": "Search orders...",
-    "order_details": "Order Details",
-    "order_items": "Items",
-    "order_summary": "Summary"
+    "unavailable": "Unavailable"
   },
   "supplier_old": {
     "active_clients": "Active Clients",
@@ -1947,6 +1943,8 @@
     "commercial_profile": "Profil commercial",
     "company_name_label": "Company Name *",
     "company_name_ph": "Company Name",
+    "contact_email": "Contact Email",
+    "contact_phone": "Contact Phone",
     "create_profile": "Create Profile",
     "days": "days",
     "description_label": "Description",
@@ -1969,9 +1967,7 @@
     "reviews": "avis",
     "role_supplier": "Supplier Manager",
     "zones_label": "Delivery Zones (comma separated)",
-    "zones_ph": "City center, suburb...",
-    "contact_email": "Contact Email",
-    "contact_phone": "Contact Phone"
+    "zones_ph": "City center, suburb..."
   },
   "suppliers": {
     "add_invoice_feature": "Upload feature coming soon",
