--- a/frontend/locales/tr.json
+++ b/frontend/locales/tr.json
@@ -1236,7 +1236,8 @@
     "star": "⭐",
     "suppliers": "Pazar Yeri Tedarikçileri",
     "title": "Pazar Yeri",
-    "verified_only": "Sadece Doğrulanmış"
+    "verified_only": "Sadece Doğrulanmış",
+    "search_placeholder": "Search for products or suppliers..."
   },
   "modals": {
     "cancel": "İptal",
@@ -1570,6 +1571,15 @@
           "Hedefli WhatsApp pazarlama kampanyaları",
           "Müşteri borçları ve kredilerinin yönetimi"
         ]
+      },
+      "reports": {
+        "title": "Analysis & Reports",
+        "desc": "Visualize your business performance with detailed charts.",
+        "benefits": [
+          "Unlimited PDF/CSV export",
+          "Full sales history",
+          "Advanced profitability analysis"
+        ]
       }
     },
     "pricing_hint": "2 500 FCFA / ay",
@@ -1720,9 +1730,9 @@
   },
   "reminders": {
     "birthdays_desc": "Notification for upcoming customer birthdays",
-    "birthdays_label": "Anniversaires clients",
+    "birthdays_label": "Birthdays",
     "client_reactivation_desc": "Alert if a VIP customer has not returned",
-    "client_reactivation_label": "Réactivation clients",
+    "client_reactivation_label": "Client Reactivation",
     "debt_recovery": "Debt Recovery",
     "debt_recovery_desc": "Dettes clients dépassant le seuil",
     "debt_recovery_label": "Debt Recovery",
@@ -1731,7 +1741,7 @@
     "expense_spike_desc": "Alert if expenses increase abnormally",
     "expense_spike_label": "Hausse des dépenses",
     "inventory_check_desc": "Reminder to verify physical stock of a product",
-    "inventory_check_label": "Vérification inventaire",
+    "inventory_check_label": "Inventory Check",
     "late_deliveries_desc": "Alert if a supplier delivery is overdue",
     "late_deliveries_label": "Late Delivery",
     "low_stock_label": "Low Stock",
@@ -1740,7 +1750,7 @@
     "pending_invitations_desc": "Reminder for unaccepted team invitations",
     "pending_invitations_label": "Pending Invitations",
     "replenishment_desc": "Purchase suggestions based on out-of-stock items",
-    "replenishment_label": "Réapprovisionnement",
+    "replenishment_label": "Replenishment",
     "stock_alerts": "Critical alerts for low stock or expired products.",
     "title": "Reminder Rules",
     "unit_days": "days"
@@ -1884,7 +1894,19 @@
       "consultation": "Sadece danışma",
       "full_management": "Tam yönetim",
       "email_24h": "Email (24s)",
-      "whatsapp_2h": "WhatsApp öncelikli (2s)"
+      "whatsapp_2h": "WhatsApp öncelikli (2s)",
+      "products_desc": "Gérez votre catalogue complet : ajout, modification, code-barres, photos, catégories et suivi des prix d'achat/vente.",
+      "stores_desc": "Gérez un ou plusieurs magasins avec stocks indépendants et suivi séparé des performances de chaque emplacement.",
+      "users_desc": "Ajoutez des collaborateurs (vendeurs, gérants) avec des rôles et permissions personnalisés pour chaque membre de l'équipe.",
+      "pos_desc": "Point de vente tactile : scan code-barres, panier, multi-paiement (espèces, Mobile Money, carte), receipts numériques et gestion des ventes à crédit.",
+      "pdf_receipts_desc": "Générez des receipts et factures PDF professionnels partageables par WhatsApp ou email, avec votre logo et coordonnées.",
+      "reports_desc": "Tableaux de bord détaillés : chiffre d'affaires, marges, produits les plus vendus, analyse ABC, tendances et export CSV/PDF.",
+      "ai_assistant_desc": "Posez vos questions en langage naturel : suggestions de réapprovisionnement, analyse des ventes, prévisions de stock et conseils de gestion.",
+      "suppliers_orders_desc": "Carnet de fournisseurs complet, création de commandes, suivi des Deliverys, gestion des retours et avoirs, historique des échanges.",
+      "csv_import_export_desc": "Importez votre catalogue depuis un fichier CSV et exportez vos données (produits, ventes, clients) en un clic.",
+      "crm_loyalty_desc": "Base clients avec historique d'achats, système de points de fidélité, niveaux Bronze/Argent/Or/Platine, promotions et campagnes marketing.",
+      "sms_alerts_desc": "Recevez des alertes automatiques en cas de rupture de stock, produit dormant ou péremption imminente. Notifications push en temps réel.",
+      "support_desc": "Assistance pour résoudre vos problèmes et optimiser votre utilisation de Stockman."
     },
     "free_trial": "Ücretsiz deneme",
     "iap_not_available": "Uygulama içi satın alımlar mevcut değil. Mobile Money kullanın.",
@@ -1927,7 +1949,16 @@
     "reviews": "Müşteri Yorumları",
     "ship": "Gönder",
     "top_products": "En Çok Satan Ürünler",
-    "unavailable": "Mevcut Değil"
+    "unavailable": "Mevcut Değil",
+    "no_orders": "No orders found",
+    "order_date": "Order Date",
+    "order_details": "Order Details",
+    "order_items": "Items",
+    "order_status": "Status",
+    "order_summary": "Summary",
+    "order_total": "Total",
+    "orders_history": "Order History",
+    "search_orders": "Search orders..."
   },
   "supplier_old": {
     "active_clients": "Aktif müşteriler",
@@ -1975,7 +2006,9 @@
     "reviews": "avis",
     "role_supplier": "Supplier",
     "zones_label": "Delivery Zones (comma separated)",
-    "zones_ph": "City center, suburb..."
+    "zones_ph": "City center, suburb...",
+    "contact_email": "Contact Email",
+    "contact_phone": "Contact Phone"
   },
   "suppliers": {
     "add_invoice_feature": "Yükleme özelliği yakında",
