--- a/frontend/locales/wo.json
+++ b/frontend/locales/wo.json
@@ -1236,7 +1236,8 @@
     "star": "⭐",
     "suppliers": "Jaaykatt yi",
     "title": "Marketplace",
-    "verified_only": "Ñi wóor rekk"
+    "verified_only": "Ñi wóor rekk",
+    "search_placeholder": "Search for products or suppliers..."
   },
   "modals": {
     "cancel": "Cancel",
@@ -1538,6 +1539,15 @@
           "Jaay-jaay bu wóor (Bronze, Xaalis, Wurus, Platine)",
           "Campagne marketing WhatsApp bu topp",
           "Saytu bor ak crédit ndaw yi"
+        ]
+      },
+      "reports": {
+        "title": "Analysis & Reports",
+        "desc": "Visualize your business performance with detailed charts.",
+        "benefits": [
+          "Unlimited PDF/CSV export",
+          "Full sales history",
+          "Advanced profitability analysis"
         ]
       }
     },
@@ -1847,7 +1857,19 @@
       "consultation": "Xool rekk",
       "full_management": "Saytu lépp",
       "email_24h": "Email (24h)",
-      "whatsapp_2h": "WhatsApp (2h)"
+      "whatsapp_2h": "WhatsApp (2h)",
+      "products_desc": "Gérez votre catalogue complet : ajout, modification, code-barres, photos, catégories et suivi des prix d'achat/vente.",
+      "stores_desc": "Gérez un ou plusieurs magasins avec stocks indépendants et suivi séparé des performances de chaque emplacement.",
+      "users_desc": "Ajoutez des collaborateurs (vendeurs, gérants) avec des rôles et permissions personnalisés pour chaque membre de l'équipe.",
+      "pos_desc": "Point de vente tactile : scan code-barres, panier, multi-paiement (espèces, Mobile Money, carte), receipts numériques et gestion des ventes à crédit.",
+      "pdf_receipts_desc": "Générez des receipts et factures PDF professionnels partageables par WhatsApp ou email, avec votre logo et coordonnées.",
+      "reports_desc": "Tableaux de bord détaillés : chiffre d'affaires, marges, produits les plus vendus, analyse ABC, tendances et export CSV/PDF.",
+      "ai_assistant_desc": "Posez vos questions en langage naturel : suggestions de réapprovisionnement, analyse des ventes, prévisions de stock et conseils de gestion.",
+      "suppliers_orders_desc": "Carnet de fournisseurs complet, création de commandes, suivi des Deliverys, gestion des retours et avoirs, historique des échanges.",
+      "csv_import_export_desc": "Importez votre catalogue depuis un fichier CSV et exportez vos données (produits, ventes, clients) en un clic.",
+      "crm_loyalty_desc": "Base clients avec historique d'achats, système de points de fidélité, niveaux Bronze/Argent/Or/Platine, promotions et campagnes marketing.",
+      "sms_alerts_desc": "Recevez des alertes automatiques en cas de rupture de stock, produit dormant ou péremption imminente. Notifications push en temps réel.",
+      "support_desc": "Assistance pour résoudre vos problèmes et optimiser votre utilisation de Stockman."
     },
     "free_trial": "3 weeru Esey",
     "iap_not_available": "In-app purchases are not available. Use Mobile Money.",
@@ -1890,7 +1912,16 @@
     "reviews": "Kaddu kilyan yi",
     "ship": "Yónnee",
     "top_products": "Liggéey yu siw",
-    "unavailable": "Amul"
+    "unavailable": "Amul",
+    "no_orders": "No orders found",
+    "order_date": "Order Date",
+    "order_details": "Order Details",
+    "order_items": "Items",
+    "order_status": "Status",
+    "order_summary": "Summary",
+    "order_total": "Total",
+    "orders_history": "Order History",
+    "search_orders": "Search orders..."
   },
   "supplier_old": {
     "active_clients": "Kilyan yu dox",
@@ -1938,7 +1969,9 @@
     "reviews": "avis",
     "role_supplier": "Supplier",
     "zones_label": "Delivery Zones (comma separated)",
-    "zones_ph": "City center, suburb..."
+    "zones_ph": "City center, suburb...",
+    "contact_email": "Contact Email",
+    "contact_phone": "Contact Phone"
   },
   "suppliers": {
     "add_invoice_feature": "Upload feature coming soon",
